# PanelPal

./: .coveragerc  .gitignore  .readthedocs.yaml  AddAnalysisRecord.py  CHANGELOG.md  Dockerfile  Jenkinsfile  LICENSE  R293_GRCh38.bed  README.md  api_functions.py  api_query.py  api_requests.py  bedtools_functions.py  create_bed.py  entrypoint.sh  environment.yaml  generate_bed.py  mkdocs.yaml  panel_app_api_functions.py  panel_app_api_functions.py2  panelpal.db  panelpal.py  panelpal.py2  panels_containing_BRCA1_green.tsv  panels_containing_TEST_all.tsv  panels_containing_TEST_green.tsv  panels_containing_TEST_green_amber.tsv  pyproject.toml  requirements.txt  settings.py  setup.py  variant_validator_api_functions.py
.github/: PULL_REQUEST_TEMPLATE.md
DB/: create_db.py  db_commands.py  db_functions.py  panel_data.json  panelpal.db  panelpal.sql  panelpal_db.py  setup.py  unit_test.py
PanelPal/: check_panel.py  compare_bedfiles.py  compare_gene_list.py  compare_panel_versions.py  db_input.py  gene_to_panels.py  generate_bed.py  main.py  panel_to_genes.py  query_db.py  settings.py  setup.py  test_panel_to_genes.py
PanelPal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
accessories/: panel_app_api_functions.py  variant_validator_api_functions.py
bedfile_comparisons/: comparison_file1.bed_file2.bed.txt
docs/: index.md  installation.md  technical_manual.md  user_manual.md
env/: environment.yaml  requirements.txt
old_and_broken/: panel_app_api_functions.py
resources/: panel_info.txt
test/: test_bedfile_functions.py  test_bedtools.py  (+11 more)
(+8 files in other folders)
