[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PanelPal"
version = "2.0.0"
description = "A tool for managing genomic panels in the National Test Directory"
authors = [
    { name = "Patrick Weller" },
    { name = "Ashley Sendell-Price" },
    { name = "Madyson Colton" },
    { name = "Rania Velissaris" }
]
readme = "README.md"
requires-python = ">=3.12.4, <3.13"
license = { text = "MIT" }
keywords = ["genomics", "panels", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "requests==2.32.3",
    "pytest==8.3.3",
    "responses==0.25.3",
    "pandas==2.2.3",
    "mkdocs==1.6.1",
    "pytest==8.3.3",
    "sqlalchemy==2.0.34",
]

[tool.setuptools.packages.find]
include = ["PanelPal*", "DB*"]
exclude = ["tmp*", "assets*", "logging*"]

[project.urls]
Homepage = "https://github.com/PatrickWeller/PanelPal"
BugTracker = "https://github.com/PatrickWeller/PanelPal/issues"

[project.scripts]
PanelPal = "PanelPal.main:main"